--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 
 body {
     background-color: #f9fafe;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +83,6 @@ body {
 }
 
 .notification-body .user-name {
-    font-weight: 800;
     color: black;
     margin-right: 0.2rem;
 }
